objects/ccrz__E_CartCoupon__c.object
<CustomObject>
    <description>It creates many-to many relationship between E_Coupon and E_Cart</description>
    <fields>
        <fullName>ccrz__CartCouponId__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>CartCoupon Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__Cart__c</fullName>
        <label>Cart</label>
        <referenceTo>ccrz__E_Cart__c</referenceTo>
        <relationshipLabel>Cart Coupons</relationshipLabel>
        <relationshipName>E_CartCoupons</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ccrz__Coupon__c</fullName>
        <label>Coupon</label>
        <referenceTo>ccrz__E_Coupon__c</referenceTo>
        <relationshipLabel>Cart Coupons</relationshipLabel>
        <relationshipName>E_CartCoupons</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>CC Cart Coupon</label>
    <nameField>
        <label>E_CartCoupon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Cart Coupons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>